Simplify instanceof checks and enhance switch expressions.